--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ h6 {
 
 h1{
   font-size: 36px;
-  color:#fff;
+  color:#DF0101;
 }
 
 h2{
@@ -381,7 +381,7 @@ input.search-form:hover {
 }
 
 #main-slider .carousel h2 {
-  color: #fff;
+  color: #DF0101;
 }
 
 #main-slider .carousel .btn-slide {
