--- a/public/views/pagina/pagina.html
+++ b/public/views/pagina/pagina.html
@@ -3,16 +3,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-xs-4">
-                    <div class="top-number"><p><i class="fa fa-phone-square"></i>  +0123 456 70 90</p></div>
+                    <div class="top-number"><p><i class="fa fa-phone-square"></i>  Nextel 01(33)1658-1168 | Celular 044 (33)13857477</div></p>
                 </div>
                 <div class="col-sm-6 col-xs-8">
                    <div class="social">
                         <ul class="social-share">
-                            <li><a ui-sref="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a ui-sref="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://www.facebook.com/dkiings.oficial/?fref=ts" target="_blanck"><i class="fa fa-facebook"></i></a></li>
+                            <!--<li><a ui-sref="#"><i class="fa fa-twitter"></i></a></li>
                             <li><a ui-sref="#"><i class="fa fa-linkedin"></i></a></li> 
                             <li><a ui-sref="#"><i class="fa fa-dribbble"></i></a></li>
-                            <li><a ui-sref="#"><i class="fa fa-skype"></i></a></li>
+                            <li><a ui-sref="#"><i class="fa fa-skype"></i></a></li>-->
                         </ul>
                         <div class="search">
                             <form role="form">
@@ -65,7 +65,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                &copy; 2013 <a target="_blank" ui-sref="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>. All Rights Reserved.
+                &copy; 2016 <a target="_blank" ui-sref="http://systemac.com.mx/" title="Desarrolado por Techno-Brothers">DKIINGS</a>. All Rights Reserved Techno-Brothers.
             </div>
             <div class="col-sm-6">
                 <ul class="pull-right">
