--- a/public/views/pagina/inicio.html
+++ b/public/views/pagina/inicio.html
@@ -12,8 +12,8 @@
                     <div class="row slide-margin">
                         <div class="col-sm-6">
                             <div class="carousel-content">
-                                <h1 class="animation animated-item-1">Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
-                                <h2 class="animation animated-item-2">Accusantium doloremque laudantium totam rem aperiam, eaque ipsa...</h2>
+                                <h1 class="animation animated-item-1">La elegancia no es acerca de ser notado</h1>
+                                <h1 class="animation animated-item-2">se trata de ser RECORDADA.</h1>
                                 <a class="btn-slide animation animated-item-3" href="#">Read More</a>
                             </div>
                         </div>
@@ -33,8 +33,8 @@
                     <div class="row slide-margin">
                         <div class="col-sm-6">
                             <div class="carousel-content">
-                                <h1 class="animation animated-item-1">Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
-                                <h2 class="animation animated-item-2">Accusantium doloremque laudantium totam rem aperiam, eaque ipsa...</h2>
+                                <h1 class="animation animated-item-1">No importa el lugar</h1>
+                                <h2 class="animation animated-item-2">CONTIGO vamos a estar.</h2>
                                 <a class="btn-slide animation animated-item-3" href="#">Read More</a>
                             </div>
                         </div>
@@ -141,7 +141,7 @@
 <section id="recent-works">
     <div class="container">
         <div class="center wow fadeInDown">
-            <h2>Recent Works</h2>
+            <h2>Trabajos recientes</h2>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
         </div>
 
@@ -588,7 +588,7 @@
                     </div>
                     <div class="media-body">
                         <h2>Have a question or need a custom quote?</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation +0123 456 70 80</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation +16581168</p>
                     </div>
                 </div>
             </div>
