--- a/public/views/pagina/contacto.html
+++ b/public/views/pagina/contacto.html
@@ -8,7 +8,7 @@
                 <div class="row">
                     <div class="col-sm-5 text-center">
                         <div class="gmap">
-                            <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=JoomShaper,+Dhaka,+Dhaka+Division,+Bangladesh&amp;aq=0&amp;oq=joomshaper&amp;sll=37.0625,-95.677068&amp;sspn=42.766543,80.332031&amp;ie=UTF8&amp;hq=JoomShaper,&amp;hnear=Dhaka,+Dhaka+Division,+Bangladesh&amp;ll=23.73854,90.385504&amp;spn=0.001515,0.002452&amp;t=m&amp;z=14&amp;iwloc=A&amp;cid=1073661719450182870&amp;output=embed"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3732.1462511408145!2d-103.31848098555062!3d20.70428490415291!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428b1a899bed0f1%3A0x3d21001202eb9f2d!2sAv+Belisario+Dom%C3%ADnguez+2114%2C+Colonia+Belisario+Dom%C3%ADnguez%2C+Guadalajara%2C+Jal.!5e0!3m2!1ses!2smx!4v1457479749405" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
                     </div>
 
@@ -16,14 +16,14 @@
                         <ul class="row">
                             <li class="col-sm-6">
                                 <address>
-                                    <h5>Head Office</h5>
-                                    <p>1537 Flint Street <br>
-                                    Tumon, MP 96911</p>
-                                    <p>Phone:670-898-2847 <br>
-                                    Email Address:info@domain.com</p>
+                                    <h5>Oficna</h5>
+                                    <p>Belisario Dominguez #2114<br>
+                                    Guadalajara Jalisco México</p>
+                                    <p>Celular: 044(33)1385-7477 | Nextel: 01(33)1658-1168 <br>
+                                    Email:Contrataciones@Dkiings.com</p>
                                 </address>
 
-                                <address>
+                                <!--<address>
                                     <h5>Zonal Office</h5>
                                     <p>1537 Flint Street <br>
                                     Tumon, MP 96911</p>                                
@@ -48,7 +48,7 @@
                                     Tumon, MP 96911</p>
                                     <p>Phone:670-898-2847 <br>
                                     Email Address:info@domain.com</p>
-                                </address>
+                                </address>-->
                             </li>
                         </ul>
                     </div>
@@ -60,15 +60,15 @@
     <section id="contact-page">
         <div class="container">
             <div class="center">        
-                <h2>Drop Your Message</h2>
-                <p class="lead">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <h2>Dejanos TU Mensaje </h2>
+                <p class="lead">¡Tú opinión es muy importante!</p>
             </div> 
             <div class="row contact-wrap"> 
                 <div class="status alert alert-success" style="display: none"></div>
                 <form id="main-contact-form" class="contact-form" name="contact-form" method="post" action="sendemail.php">
                     <div class="col-sm-5 col-sm-offset-1">
                         <div class="form-group">
-                            <label>Name *</label>
+                            <label>Nombre *</label>
                             <input type="text" name="name" class="form-control" required="required">
                         </div>
                         <div class="form-group">
@@ -76,25 +76,25 @@
                             <input type="email" name="email" class="form-control" required="required">
                         </div>
                         <div class="form-group">
-                            <label>Phone</label>
+                            <label>Telefono</label>
                             <input type="number" class="form-control">
                         </div>
-                        <div class="form-group">
+                        <!--<div class="form-group">
                             <label>Company Name</label>
                             <input type="text" class="form-control">
-                        </div>                        
+                        </div>-->                        
                     </div>
                     <div class="col-sm-5">
                         <div class="form-group">
-                            <label>Subject *</label>
+                            <label>Asunto*</label>
                             <input type="text" name="subject" class="form-control" required="required">
                         </div>
                         <div class="form-group">
-                            <label>Message *</label>
+                            <label>Mensaje*</label>
                             <textarea name="message" id="message" required="required" class="form-control" rows="8"></textarea>
                         </div>                        
                         <div class="form-group">
-                            <button type="submit" name="submit" class="btn btn-primary btn-lg" required="required">Submit Message</button>
+                            <button type="submit" name="submit" class="btn btn-primary btn-lg" required="required">Enviar Mensaje</button>
                         </div>
                     </div>
                 </form> 
