--- a/public/views/pagina/inicio.html
+++ b/public/views/pagina/inicio.html
@@ -39,11 +39,11 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 hidden-xs animation animated-item-4">
+                        <!--div class="col-sm-6 hidden-xs animation animated-item-4">
                             <div class="slider-img">
                                 <img src="images/slider/img2.png" class="img-responsive">
                             </div>
-                        </div>
+                        </div-->
 
                     </div>
                 </div>
@@ -59,11 +59,11 @@
                                 <a class="btn-slide animation animated-item-3" href="#">Read More</a>
                             </div>
                         </div>
-                        <div class="col-sm-6 hidden-xs animation animated-item-4">
+                        <!--div class="col-sm-6 hidden-xs animation animated-item-4">
                             <div class="slider-img">
                                 <img src="images/slider/img3.png" class="img-responsive">
                             </div>
-                        </div>
+                        </div-->
                     </div>
                 </div>
             </div><!--/.item-->
@@ -581,17 +581,17 @@
 <section id="partner">
     <div class="container">
         <div class="center wow fadeInDown">
-            <h2>Our Partners</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
+            <h2>Nuestros Socios</h2>
+            <p class="lead">Ellos tambien forman parte importande nuestra empresa, siempre buscams GANAR, GANAR, si t estas interezado en ser socio nuestro ponte en contacto con nosotros.</p>
         </div>    
 
         <div class="partners">
             <ul>
                 <li> <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms" src="images/partners/partner1.png"></a></li>
-                <li> <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" src="images/partners/partner2.png"></a></li>
+               <!-- <li> <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" src="images/partners/partner2.png"></a></li>
                 <li> <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms" src="images/partners/partner3.png"></a></li>
                 <li> <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms" src="images/partners/partner4.png"></a></li>
-                <li> <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1500ms" src="images/partners/partner5.png"></a></li>
+                <li> <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1500ms" src="images/partners/partner5.png"></a></li-->
             </ul>
         </div>        
     </div><!--/.container-->
