--- a/public/views/pagina/paquetes.html
+++ b/public/views/pagina/paquetes.html
@@ -1,8 +1,8 @@
     <section class="pricing-page">
         <div class="container">
             <div class="center">  
-                <h2>Pricing Table</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
+                <h2>Precios</h2>
+                <p class="lead">Comunicate con nosotros para brindarte<br>un precio justo o armar un paquete a tu medida    </p>
             </div>  
             <div class="pricing-area text-center">
                 <div class="row">
@@ -130,8 +130,14 @@
             </div><!--/pricing-area-->
         </div><!--/container-->
     </section><!--/pricing-page-->
+
+    <div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+        <img src="images/promocion/paquete.jpg" class="img-responsive" alt="Cinque Terre" >
+    </div>     
            
-    <section id="bottom">
+           
+
+    <!--<section id="bottom">
         <div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
@@ -147,7 +153,7 @@
                             <li><a href="#">Contact us</a></li>
                         </ul>
                     </div>    
-                </div><!--/.col-md-3-->
+                </div><!-/.col-md-3->
 
                 <div class="col-md-3 col-sm-6">
                     <div class="widget">
@@ -162,7 +168,7 @@
                             <li><a href="#">Billing system</a></li>
                         </ul>
                     </div>    
-                </div><!--/.col-md-3-->
+                </div><!-/.col-md-3->
 
                 <div class="col-md-3 col-sm-6">
                     <div class="widget">
@@ -177,7 +183,7 @@
                             <li><a href="#">Article Writing</a></li>
                         </ul>
                     </div>    
-                </div><!--/.col-md-3-->
+                </div><!-/.col-md-3->
 
                 <div class="col-md-3 col-sm-6">
                     <div class="widget">
@@ -192,7 +198,7 @@
                             <li><a href="#">Laboris</a></li>
                         </ul>
                     </div>    
-                </div><!--/.col-md-3-->
+                </div><!-/.col-md-3->
             </div>
         </div>
-    </section><!--/#bottom-->
+    </section><!-/#bottom-->
