--- a/public/views/pagina/servicios.html
+++ b/public/views/pagina/servicios.html
@@ -1,7 +1,7 @@
     <section id="feature" class="transparent-bg">
         <div class="container">
            <div class="center wow fadeInDown">
-                <h2>Our Services</h2>
+                <h2>Nuestros Servicios :) </h2>
                 <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>
 
@@ -9,97 +9,102 @@
                 <div class="features">
                     <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="feature-wrap">
-                            <i class="fa fa-bullhorn"></i>
-                            <h2>Fresh and Clean</h2>
-                            <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
+                            <i class="fa fa-gift"></i>
+                            <h2>Quinceañeras</h2>
+                            <h3>La razon de ser de nuestra empresa, contamos con mas de 7 años en el mercado y hemos acompañado a mas de 1000 quinceañeras en sus coreografias.</h3>
                         </div>
                     </div><!--/.col-md-4-->
 
                     <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="feature-wrap">
-                            <i class="fa fa-comments"></i>
-                            <h2>Retina ready</h2>
-                            <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
+                            <i class="fa fa-bars"></i>
+                            <h2>Performance</h2>
+                            <h3>Nuestros coreógrafos estan capacitados para crear el mejor espectaculo para cualquier tipo de evento, resaltando siempre el tema principal como: Pasarelas, Bodas, Bares, Antros, etc. </h3>
                         </div>
                     </div><!--/.col-md-4-->
 
                     <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="feature-wrap">
-                            <i class="fa fa-cloud-download"></i>
-                            <h2>Easy to customize</h2>
-                            <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
-                        </div>
-                    </div><!--/.col-md-4-->
-                
-                    <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-                        <div class="feature-wrap">
-                            <i class="fa fa-leaf"></i>
-                            <h2>Adipisicing elit</h2>
-                            <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
-                        </div>
-                    </div><!--/.col-md-4-->
-
-                    <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-                        <div class="feature-wrap">
-                            <i class="fa fa-cogs"></i>
-                            <h2>Sed do eiusmod</h2>
-                            <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
-                        </div>
-                    </div><!--/.col-md-4-->
-
-                    <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-                        <div class="feature-wrap">
-                            <i class="fa fa-heart"></i>
-                            <h2>Labore et dolore</h2>
-                            <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
+                            <i class="fa fa-users"></i>
+                            <h2>Tablas Ritmicas</h2>
+                            <h3>Ensayamos grupos grandes adaptando cualquier tipo de idea y completándola con nuestra innovación y experiencia</h3>
                         </div>
                     </div><!--/.col-md-4-->
                 </div><!--/.services-->
             </div><!--/.row--> 
 
+            <div class="row">
+                <div class="features">     
+
+                    <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                        <div class="feature-wrap">
+                            <i class="fa fa-bullhorn"></i>
+                            <h2>Coreografo</h2>
+                            <h3>Si ya tienes a tus chambelanes, les ayudamos a crear un espectaculo y capasitarlos para que tu coreografía sea inolvidable</h3>
+                        </div>
+                    </div><!--/.col-md-4-->
+
+                    <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                        <div class="feature-wrap">
+                            <i class="fa fa-calendar"></i>
+                            <h2>coordinación de eventos</h2>
+                            <h3>Trabajamos con el mejor equipo de proveedores para que tu unica responsabilidad sea disfrutar al maximo u fiesta</h3>
+                        </div>
+                    </div><!--/.col-md-4-->
+
+                    <!--div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                        <div class="feature-wrap">
+                            <i class="fa fa-heart"></i>
+                            <h2>Labore et dolore</h2>
+                            <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
+                        </div>
+                    </div><!-/.col-md-4-->
+                </div><!--/.services-->
+            </div><!--/.row--> 
+
 
             <div class="get-started center wow fadeInDown">
-                <h2>Ready to get started</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore  magna aliqua. <br>  Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+                <h2>Conoce nuestro equipo de trabajo</h2>
+                <p class="lead">Es bueno que conozcas en manos de quien van a quedar los pasos que dejaran huella importante en tu vida.  <br>! Nos has encontrado ¡Es momento de continuar con el baile...</p>
                 <div class="request">
-                    <h4><a href="#">Request a free Quote</a></h4>
+                    <h4><a href="#">Contratanos click aquí.</a></h4>
                 </div>
             </div><!--/.get-started-->
 
             <div class="clients-area center wow fadeInDown">
-                <h2>What our client says</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
+                <h2>Lo que los LIDERES Dkiings dicen.</h2>
+                <p class="lead">Siempre es grato escuchar a los lideres para que nuestros proyectos salgan avante<br> ya que son ellos las personas fundadoras y responsables DKIINGS.</p>
             </div>
 
             <div class="row">
                 <div class="col-md-4 wow fadeInDown">
                     <div class="clients-comments text-center">
                         <img src="images/client1.png" class="img-circle" alt="">
-                        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</h3>
-                        <h4><span>-John Doe /</span>  Director of corlate.com</h4>
+                        <h3>Pensamiento</h3>
+                        <h4><span>-Carlos Orozco /</span>  Director General.</h4>
                     </div>
                 </div>
                 <div class="col-md-4 wow fadeInDown">
                     <div class="clients-comments text-center">
                         <img src="images/client2.png" class="img-circle" alt="">
-                        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</h3>
-                        <h4><span>-John Doe /</span>  Director of corlate.com</h4>
+                        <h3>Pensamiento</h3>
+                        <h4><span>-Raul Hernandez /</span>  Director Comercial.</h4>
                     </div>
                 </div>
-                <div class="col-md-4 wow fadeInDown">
+                <!--div class="col-md-4 wow fadeInDown">
                     <div class="clients-comments text-center">
                         <img src="images/client3.png" class="img-circle" alt="">
                         <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</h3>
                         <h4><span>-John Doe /</span>  Director of corlate.com</h4>
                     </div>
-                </div>
+                </div-->
            </div>
 
         </div><!--/.container-->
     </section><!--/#feature-->
 
 
-    <section id="bottom">
+    <!--section id="bottom">
         <div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
@@ -115,7 +120,7 @@
                             <li><a href="#">Contact us</a></li>
                         </ul>
                     </div>    
-                </div><!--/.col-md-3-->
+                </div><!-/.col-md-3->
 
                 <div class="col-md-3 col-sm-6">
                     <div class="widget">
@@ -130,7 +135,7 @@
                             <li><a href="#">Billing system</a></li>
                         </ul>
                     </div>    
-                </div><!--/.col-md-3-->
+                </div><!-/.col-md-3->
 
                 <div class="col-md-3 col-sm-6">
                     <div class="widget">
@@ -145,7 +150,7 @@
                             <li><a href="#">Article Writing</a></li>
                         </ul>
                     </div>    
-                </div><!--/.col-md-3-->
+                </div><!-/.col-md-3->
 
                 <div class="col-md-3 col-sm-6">
                     <div class="widget">
@@ -160,7 +165,7 @@
                             <li><a href="#">Laboris</a></li>
                         </ul>
                     </div>    
-                </div><!--/.col-md-3-->
+                </div><!-/.col-md-3->
             </div>
         </div>
-    </section><!--/#bottom-->
+    </section><!-/#bottom-->
