--- a/public/views/cms/cms.html
+++ b/public/views/cms/cms.html
@@ -44,6 +44,9 @@
                             </li>
                         </ul>
                     </li>
+                    <li ng-controller="logoutCtrl as logout">
+                        <a ng-click="logout.logout()">Salir <i class="fa fa-sign-out"></i></a>
+                    </li>
                 </ul>
             </div>
         </div><!--/.container-->
