Primera version del cms Dkings

--- a/public/views/cms/cms.html
+++ b/public/views/cms/cms.html
@@ -1,4 +1,4 @@
-<header id="header">
+<header id="header" >
     <nav class="navbar navbar-inverse" role="banner">
         <div class="container">
             <div class="navbar-header">
@@ -23,7 +23,7 @@
                                 </a>
                             </li>
                             <li ui-sref-active="active">
-                                <a ui-sref="pricing.html">
+                                <a ui-sref="categoria_list">
                                     Ver Categorias
                                 </a>
                             </li>
