--- a/public/views/cms/categorias_list.html
+++ b/public/views/cms/categorias_list.html
@@ -1,100 +1,36 @@
+<style>
+    .table-responsive {
+        border: 1px solid #dedede;
+        padding: 0px !important;
+    }
+</style>
 <section class="container">
-
 	<section class="row">
-		<div class="col-sm-6 wow fadeInDown">
-                <div class="accordion">
-                    <h2>¿Aún no te animas a contratarnos?</h2>
-                    <div class="panel-group" id="accordion1">
-                      <div class="panel panel-default">
-                        <div class="panel-heading active">
-                          <h3 class="panel-title">
-                            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseOne1">
-                              QUINCEAÑERAS:
-                              <i class="fa fa-angle-right pull-right"></i>
-                            </a>
-                          </h3>
-                        </div>
-
-                        <div id="collapseOne1" class="panel-collapse collapse in">
-                          <div class="panel-body">
-                              <div class="media accordion-inner">
-                                    <div class="pull-left">
-                                        <img class="img-responsive" src="images/accordion1.png">
-                                    </div>
-                                    <div class="media-body">
-                                         <h4>XV años</h4>
-                                         <p>La razon de ser de nuestra empres. Contamos con mas de 7 años en el mercado y hemos acompañado a mas de 1000 QUINCEAÑERAS en sus coreografias</p>
-                                    </div>
-                              </div>
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="panel panel-default">
-                        <div class="panel-heading">
-                          <h3 class="panel-title">
-                            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseP">
-                              PERFORMANCE:
-                              <i class="fa fa-angle-right pull-right"></i>
-                            </a>
-                          </h3>
-                        </div>
-                        <div id="collapseP" class="panel-collapse collapse">
-                          <div class="panel-body">
-                            Nuestros coreografos estan capasitados para crear él mejor espectaculo para cualquier tipo de evento, resaltando siempre él tema principal como: Pasarelas, bares, antros, bodas etc.
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="panel panel-default">
-                        <div class="panel-heading">
-                          <h3 class="panel-title">
-                            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseThree1">
-                              TABLAS RITMICAS:
-                              <i class="fa fa-angle-right pull-right"></i>
-                            </a>
-                          </h3>
-                        </div>
-                        <div id="collapseThree1" class="panel-collapse collapse">
-                          <div class="panel-body">
-                            Ensayamos grupos grandes adaptando cualquier tipo de idea y complementandola con nuestra innovación y experiencia.
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="panel panel-default">
-                        <div class="panel-heading">
-                          <h3 class="panel-title">
-                            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseThree11">
-                              COORDINACIÓN DE EVENTOS:
-                              <i class="fa fa-angle-right pull-right"></i>
-                            </a>
-                          </h3>
-                        </div>
-                        <div id="collapseThree11" class="panel-collapse collapse">
-                          <div class="panel-body">
-                            Trabajamos con él mejor equipo de proveedores para que tu única responsabilidad sea disfrutar al maximo tu fiesta.
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="panel panel-default">
-                        <div class="panel-heading">
-                          <h3 class="panel-title">
-                            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseFour1">
-                              COREOGRAFO:
-                              <i class="fa fa-angle-right pull-right"></i>
-                            </a>
-                          </h3>
-                        </div>
-                        <div id="collapseFour1" class="panel-collapse collapse">
-                          <div class="panel-body">
-                            Contamos con un coreografo para (amigos, familiares de quinceañera). Si ya tienes a tus chambelanes, les ayudamos a creae un espectáculo y capacitarlos para que tu coreografía sea inolvidable.
-                          </div>
-                        </div>
-                      </div>
-                    </div><!--/#accordion1-->
-                </div>
-            </div>
+		<h1>Listado de Categorias</h1>
+        <div class="table-responsive col-xs-12">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th class="center">Nombre</th>
+                        <th class="center">Descripción</th>
+                        <th class="center">Editar</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="categorias in categoria.categorias">
+                        <th class="center">{{categorias.nombre_categoria}}</th>
+                        <th class="center">{{categorias.descripcion_categoria}}</th>
+                        <th clasS="center"><a href="" class="btn btn-danger"><i class="fa fa-pencil-square-o"></i></a></th>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 	</section>
+    <br>   
+    <div class="row">
+        <div class="col-xs-12">
+            <button type="button" class="btn btn-warning" ui-sref="categoria_create">Nueva Categoria</button>
+        </div>
+    </div>
+    <br>
 </section>
