--- a/public/views/cms/cms.html
+++ b/public/views/cms/cms.html
@@ -18,7 +18,7 @@
                         <a ui-sref="#" class="dropdown-toggle" data-toggle="dropdown">Categorias <i class="fa fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li ui-sref-active="active">
-                                <a ui-sref="blog-item.html">
+                                <a ui-sref="categoria_create">
                                     Nueva Categoria
                                 </a>
                             </li>
@@ -33,12 +33,12 @@
                         <a ui-sref="#" class="dropdown-toggle" data-toggle="dropdown">Galeria <i class="fa fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li ui-sref-active="active">
-                                <a ui-sref="blog-item.html">
+                                <a ui-sref="galeria_create">
                                     Nueva Imagen
                                 </a>
                             </li>
                             <li ui-sref-active="active">
-                                <a ui-sref="pricing.html">
+                                <a ui-sref="galeria_list">
                                     Ver Imagenes
                                 </a>
                             </li>
@@ -52,7 +52,9 @@
         </div><!--/.container-->
     </nav><!--/nav-->
 </header><!--/header-->
-<div ui-view></div>
+<div ui-view class="main-app">
+    
+</div>
 <footer id="footer" class="midnight-blue">
     <div class="container">
         <div class="row">
