--- a/public/views/pagina/galeria.html
+++ b/public/views/pagina/galeria.html
@@ -7,15 +7,15 @@
     
 
         <ul class="portfolio-filter text-center">
-            <li><a class="btn btn-default active" href="" data-filter="*">All Works</a></li>
-            <li><a class="btn btn-default" href="" data-filter=".bootstrap">Creative</a></li>
-            <li><a class="btn btn-default" href="" data-filter=".html">Photography</a></li>
+            <li><a class="btn btn-default active"   href="" data-filter="*">All Works</a></li>
+            <li><a class="btn btn-default"          href="" data-filter=".bootstrap">Creative</a></li>
+            <li><a class="btn btn-default"          href="" data-filter=".html">Photography</a></li>
             <li><a class="btn btn-default" href="" data-filter=".wordpress">Web Development</a></li>
         </ul><!--/#portfolio-filter-->
 
         <div class="row">
             <div class="portfolio-items">
-                <div class="portfolio-item apps col-xs-12 col-sm-4 col-md-3">
+                <div class="portfolio-item apps col-xs-12 col-sm-4 col-md-3 ejemplo">
                     <div class="recent-work-wrap">
                         <img class="img-responsive" src="images/portfolio/recent/item1.png" alt="">
                         <div class="overlay">
