--- a/public/views/cms/galeria_list.html
+++ b/public/views/cms/galeria_list.html
@@ -11,7 +11,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="galeria in galeria.galerias">
+                    <tr ng-repeat="galeria in galeria.imagenes">
                         <th class="center">
                             <a href="">
                                 <img ng-src="{{galeria.url_imagen_miniatura}}" alt="" >
