--- a/public/views/pagina/inicio.html
+++ b/public/views/pagina/inicio.html
@@ -428,7 +428,7 @@
                         </div>
                         <div id="collapseTwo1" class="panel-collapse collapse">
                           <div class="panel-body">
-                            Nuestros coreografos estan capasitados para crear él mejor espectaculo para cualquier tipo de evento, resaltando siempre él tema principal como: Pasarelas, bares, antros, bodas etc.
+                            Nuestros coreografos estan capacitados para crear él mejor espectaculo para cualquier tipo de evento, resaltando siempre él tema principal como: Pasarelas, bares, antros, bodas etc.
                           </div>
                         </div>
                       </div>
@@ -582,7 +582,7 @@
     <div class="container">
         <div class="center wow fadeInDown">
             <h2>Nuestros Socios</h2>
-            <p class="lead">Ellos tambien forman parte importande nuestra empresa, siempre buscams GANAR, GANAR, si t estas interezado en ser socio nuestro ponte en contacto con nosotros.</p>
+            <p class="lead">Ellos tambien forman parte importante en nuestra empresa, siempre buscamos GANAR, GANAR, si estas interezado en ser socio nuestro ponte en contacto con nosotros.</p>
         </div>    
 
         <div class="partners">
