--- a/public/views/pagina/paquetes.html
+++ b/public/views/pagina/paquetes.html
@@ -132,7 +132,9 @@
     </section><!--/pricing-page-->
 
     <div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-        <img src="images/promocion/paquete.jpg" class="img-responsive" alt="Cinque Terre" >
+        <div class="container">
+            <img src="images/promocion/paquete.jpg" class="img-responsive" alt="Cinque Terre" >
+        </div>    
     </div>     
            
            
