--- a/public/views/pagina/servicios.html
+++ b/public/views/pagina/servicios.html
@@ -2,7 +2,7 @@
         <div class="container">
            <div class="center wow fadeInDown">
                 <h2>Nuestros Servicios :) </h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
+                <p class="lead">Garantizamos el desempeño de nuestros servicos<br>no dudes en que nosotros seamos parte de tu SUEÑO</p>
             </div>
 
             <div class="row">
@@ -87,7 +87,7 @@
                 <div class="col-md-4 wow fadeInDown">
                     <div class="clients-comments text-center">
                         <img src="images/client2.png" class="img-circle" alt="">
-                        <h3>Pensamiento</h3>
+                        <h3>Lo mas valioso e importante de nuestro trabajo es poder ayudar a construir y hacer posible lo que en mucho tiempo solo fueron sueños, pensamientos e ilusiones de nuestros cientes, hacer lucir a la quinceañera siempre sera nuestra razón de ser.</h3>
                         <h4><span>-Raul Hernandez /</span>  Director Comercial.</h4>
                     </div>
                 </div>
