--- a/public/views/pagina/contacto.html
+++ b/public/views/pagina/contacto.html
@@ -1,7 +1,7 @@
     <section id="contact-info">
         <div class="center">                
-            <h2>How to Reach Us?</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+            <h2>A un paso de ti...!</h2>
+            <p class="lead">Te recordamos que contamos 3, 6, 9 y 12 meses sin intereses. Además recibimos cualquier tipo de tarjeta.</p>
         </div>
         <div class="gmap-area">
             <div class="container">
